--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "bandeco-front",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx babel index.js --out-file index-compiled.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LucasLuiz01/Bandeco-Front.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LucasLuiz01/Bandeco-Front/issues"
-  },
-  "homepage": "https://github.com/LucasLuiz01/Bandeco-Front#readme",
+  "name": "projeto11-trackit",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "axios": "^1.1.3",
+    "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.6"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
