--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.1.3",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.1.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
