--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.6"
